--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -3377,27 +3377,26 @@ Chronopic</property>
                                                 <property name="label_yalign">0.89999997615814209</property>
                                                 <property name="shadow_type">in</property>
                                                 <child>
-                                                  <widget class="GtkScrolledWindow" id="scrolledwindow3">
+                                                  <widget class="GtkAlignment" id="alignment6">
                                                     <property name="visible">True</property>
-                                                    <property name="can_focus">True</property>
-                                                    <property name="hscrollbar_policy">never</property>
-                                                    <property name="vscrollbar_policy">automatic</property>
+                                                    <property name="can_focus">False</property>
+                                                    <property name="top_padding">4</property>
+                                                    <property name="left_padding">4</property>
                                                     <child>
-                                                      <widget class="GtkViewport" id="viewport1">
+                                                      <widget class="GtkVBox" id="vbox23">
                                                         <property name="visible">True</property>
                                                         <property name="can_focus">False</property>
-                                                        <property name="shadow_type">none</property>
+                                                        <property name="spacing">8</property>
                                                         <child>
-                                                          <widget class="GtkAlignment" id="alignment6">
+                                                          <widget class="GtkScrolledWindow" id="scrolledwindow3">
                                                             <property name="visible">True</property>
-                                                            <property name="can_focus">False</property>
-                                                            <property name="top_padding">4</property>
-                                                            <property name="left_padding">4</property>
+                                                            <property name="can_focus">True</property>
+                                                            <property name="hscrollbar_policy">never</property>
+                                                            <property name="vscrollbar_policy">automatic</property>
                                                             <child>
-                                                            <widget class="GtkVBox" id="vbox23">
+                                                            <widget class="GtkViewport" id="viewport1">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
-                                                            <property name="spacing">8</property>
                                                             <child>
                                                             <widget class="GtkNotebook" id="notebook_options">
                                                             <property name="visible">True</property>
@@ -4415,6 +4414,7 @@ weight</property>
                                                             <widget class="GtkLabel" id="label104">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
+                                                            <property name="has_tooltip">True</property>
                                                             <property name="tooltip" translatable="yes">"Speed start" means when athlete does not start with "contact" on the first platform or photocell.
 It starts before and arrives there with some speed.</property>
                                                             <property name="xalign">0</property>
@@ -4455,7 +4455,6 @@ It starts before and arrives there with some speed.</property>
                                                             <property name="can_focus">True</property>
                                                             <property name="receives_default">False</property>
                                                             <property name="use_action_appearance">False</property>
-                                                            <property name="active">True</property>
                                                             <property name="draw_indicator">True</property>
                                                             <property name="group">radio_runs_speed_start_arrival</property>
                                                             <signal name="toggled" handler="on_radio_runs_speed_start_toggled" swapped="no"/>
@@ -4861,6 +4860,7 @@ It starts before and arrives there with some speed.</property>
                                                             <widget class="GtkLabel" id="label106">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
+                                                            <property name="has_tooltip">True</property>
                                                             <property name="tooltip" translatable="yes">"Speed start" means when athlete does not start with "contact" on the first platform or photocell.
 It starts before and arrives there with some speed.</property>
                                                             <property name="xalign">0</property>
@@ -5592,14 +5592,18 @@ Second Chronopic to platforms.</property>
                                                             </packing>
                                                             </child>
                                                             </widget>
-                                                            <packing>
+                                                            </child>
+                                                            </widget>
+                                                            </child>
+                                                          </widget>
+                                                          <packing>
                                                             <property name="expand">True</property>
                                                             <property name="fill">True</property>
                                                             <property name="position">0</property>
-                                                            </packing>
-                                                            </child>
-                                                            <child>
-                                                            <widget class="GtkVBox" id="vbox28">
+                                                          </packing>
+                                                        </child>
+                                                        <child>
+                                                          <widget class="GtkVBox" id="vbox28">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
                                                             <child>
@@ -5704,16 +5708,12 @@ Second Chronopic to platforms.</property>
                                                             <property name="position">1</property>
                                                             </packing>
                                                             </child>
-                                                            </widget>
-                                                            <packing>
+                                                          </widget>
+                                                          <packing>
                                                             <property name="expand">False</property>
                                                             <property name="fill">True</property>
                                                             <property name="position">1</property>
-                                                            </packing>
-                                                            </child>
-                                                            </widget>
-                                                            </child>
-                                                          </widget>
+                                                          </packing>
                                                         </child>
                                                       </widget>
                                                     </child>
