--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -29664,7 +29664,7 @@ suitable for agility tests)</property>
                                   <widget class="GtkLabel" id="label547">
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
-                                    <property name="label" translatable="yes">Number of tracks</property>
+                                    <property name="label" translatable="yes">Number of different tracks</property>
                                   </widget>
                                   <packing>
                                     <property name="expand">False</property>
@@ -29691,6 +29691,22 @@ suitable for agility tests)</property>
                                     <property name="expand">False</property>
                                     <property name="fill">False</property>
                                     <property name="position">1</property>
+                                  </packing>
+                                </child>
+                                <child>
+                                  <widget class="GtkButton" id="button_help_rsa">
+                                    <property name="label" translatable="yes">Help RSA</property>
+                                    <property name="visible">True</property>
+                                    <property name="can_focus">True</property>
+                                    <property name="receives_default">True</property>
+                                    <property name="use_action_appearance">False</property>
+                                    <signal name="clicked" handler="on_button_help_rsa_clicked" swapped="no"/>
+                                  </widget>
+                                  <packing>
+                                    <property name="expand">False</property>
+                                    <property name="fill">True</property>
+                                    <property name="pack_type">end</property>
+                                    <property name="position">2</property>
                                   </packing>
                                 </child>
                               </widget>
